# CasualMemoryAgent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py
backend/app/api/: __init__.py  chat.py  memory.py
backend/app/core/: config.py
backend/app/models/: __init__.py  chat.py  graph.py
backend/app/services/: __init__.py  database.py  embedding.py  memory_graph.py
backend/data/database/lancedb/edges.lance/_transactions/: 0-edf48325-e225-419f-8459-ebbacb7c8305.txn
backend/data/database/lancedb/edges.lance/_versions/: 1.manifest
backend/data/database/lancedb/nodes.lance/_transactions/: 0-3fe9b901-d3b1-48c8-9190-17cc24fa326b.txn  1-34834a46-4398-473a-8ed3-1fc0b252ac9e.txn
backend/data/database/lancedb/nodes.lance/_versions/: 1.manifest  2.manifest
doc/: 整体设计思路.md  设计目标.md  项目选型.md
doc/chat_history/: 20251204-gemini3-overall-design.txt
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  Layout.tsx
frontend/src/hooks/: use-chat-api.ts
frontend/src/pages/: ChatPage.tsx  EventsPage.tsx  GraphPage.tsx  MemoryPage.tsx  index.ts
reference/: bgem3.py  bgererankerv2m3.py
reference/ref_docs/Icons/: icons.md
reference/ref_docs/shadcn-ui/: components.md  shadcn-ui_install.md  similar_resources.md
script/: dev.ps1  dev.sh  setup.ps1  setup.sh
